[tool.poetry]
name = "django-test"
version = "0.1.0"
description = "Just a simple app to run the workflow with"
authors = ["fanna <fanna.lautenbach@repowered.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.1.2"
psycopg2-binary = "2.9.10"
sqlalchemy = "2.0.36"
alembic = "1.14.0"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-django = "4.9.0"
pytest-cov = "^4.1.0"
pytest-testmon = "^2.0.13"
pytest-xdist = "^3.6.1"
pytest-md-report = "0.6.2"

# To test the integration with groups and the private PyPI
[tool.poetry.group.A.dependencies]
alan = {version = "^0.1.16", source = "repowered"}

# Instead of using an 'ini' file
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dummy.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]

# Instead of using a '.coveragerc' file
[tool.coverage.run]
relative_files = true
omit = ["*/migrations/*"]
data_file = ".coverage"

[[tool.poetry.source]]
name = "repowered"
url = "http://packages.repowered.nl/simple"
priority = 'explicit'

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
